hotkey navigation between user posts

--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -195,6 +195,19 @@ h3.last_week-header {
   z-index: 99;  
 }
 
+.control-links {  
+  position: relative;
+  font-size: 20px; 
+  margin-bottom: 30px;
+  width: 90px;
+  
+  span {
+    font-size: 14px;
+    text-align: center;
+    vertical-align: baseline;
+  }
+}  
+
 .p-post {
   span.week {
     display: inline-block;
