--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -166,6 +166,17 @@ h3.last_week-header a {
   margin-top: 0 !important;
   z-index: 99;
 }
+.control-links {
+  position: relative;
+  font-size: 20px;
+  margin-bottom: 30px;
+  width: 90px;
+}
+.control-links span {
+  font-size: 14px;
+  text-align: center;
+  vertical-align: baseline;
+}
 .p-post span.week {
   display: inline-block;
   margin-bottom: 5px;
