--- a/app/views/shared/_admin_pane.html.haml
+++ b/app/views/shared/_admin_pane.html.haml
@@ -9,20 +9,25 @@
         .logo-text
           %span Talks
           %span Редакция
-          
+      
       %ul.admin-categories
         %li.posts-category Параграфы
-        %li Разные штуки
-        
+        %li.weeks-category Недели
+        %li Разное
+      
       %ul.category-items
-        %li= link_to 'Опубликованные', root_url
+        %li= link_to 'Опубликованные', "/search"
         %li= link_to 'Фичеры', root_url
         %li= link_to  'Авторы', root_url      
         %li.new= link_to  'Жалобы', root_url
-        %li= link_to  'Статистика', root_url
-        
+        %li= link_to  'Статистика', statistics_users_url
+      
       %ul.category-items
-        %li= link_to 'Приглашения', root_url
+        %li= link_to 'Текущая', weeks_url
+        %li= link_to  'Прошедшие', weeks_url
+      
+      %ul.category-items
+        %li= link_to 'Заявки', applicants_url
         %li= link_to  'Рассылки', root_url
         %li= link_to  'Члены команды', root_url
         %li.new= link_to  'Баннеры', root_url
