--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -16,7 +16,7 @@
   %br/
   = social_button('Facebook', 'http://www.facebook.com/pages/Talks/162342890449495', 'facebook')  
   = social_button('Twitter', 'http://twitter.com/talks_news', 'twitter')
-  = social_button('Vkontakte', 'http://vkontakte.ru/club20484089', 'vkontakte')
+  = social_button('Vkontakte', 'http://vkontakte.ru/talks', 'vkontakte')
 - if params[:controller] == "home"
   #what-is-talks  
     = link_to_unless_current "Что это такое?", page_path("about")
