--- a/app/stylesheets/application.less
+++ b/app/stylesheets/application.less
@@ -362,3 +362,13 @@ ul.songs-list {
     padding: 4px 0 0 42px;
   }
 }
+
+.p-loves-p {
+  position: relative;
+  text-align: center;
+  height: 310px;
+  width: 100%;
+  margin: 10px 0 50px 0;  
+}
+
+.hidden { display: none; }
