--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -302,3 +302,11 @@ ul.songs-list li span a { color: #121212; }
   height: 24px;
   padding: 4px 0 0 42px;
 }
+.p-loves-p {
+  position: relative;
+  text-align: center;
+  height: 310px;
+  width: 100%;
+  margin: 10px 0 50px 0;
+}
+.hidden { display: none; }
