--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -12,15 +12,5 @@
           Все параграфы пользователя
           %strong
             = @user.username
-      - @posts.each do |post|
-        .postPreview
-          .image
-            = link_to image_tag(post.picture.url(:preview), :class => "rc4"), post
-          .text
-            .header
-              %h2
-                = link_to post.title, post
-              %span.data
-                = I18n.l post.created_at.to_date
-            .description
-              = truncate(post.conversation, :length => 80, :separator => ' ').markdown.typography.html_safe
+      = render :partial => "/posts/post", :collection => @posts, :as => :post
+          
