--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -12,8 +12,10 @@
           - if @post.week.present?
             %span.week            
               = link_to @post.week.name, week_path(@post.week)
-              
-          %h1= @post.title           
+          - if @post.is_hidden?
+            %h1.post-hidden= @post.title
+          - else
+            %h1= @post.title
           %span.p-post-date= I18n.l @post.created_at.to_date
         .p-post-picture
           = image_tag(@post.picture.url(:normal))
@@ -59,5 +61,8 @@
             %br
           - if can? :destroy, @post
             = link_to 'Удалить', @post, :confirm => 'Вы уверены?', :method => :delete, :class => 'b-func-button-destroy'
+          - if can? :trigger_visibility, @post
+            .p{:style => "margin-top: 15px;"}
+              = trigger_visibility_link
 
       .clear
