--- a/app/views/weeks/show.html.haml
+++ b/app/views/weeks/show.html.haml
@@ -28,17 +28,4 @@
       %i
   .column.column2-x2
     .posts
-      - @week.posts.each do |post|
-        .postPreview
-          .image
-            = link_to image_tag(post.picture.url(:preview), :class => "rc4"), post
-          .text
-            .header
-              %h2
-                = link_to post.title, post
-              %span.data
-                = succeed "," do
-                  = link_to post.user.username, post.user, :class => 'author'
-                = I18n.l post.created_at.to_date
-            .description
-              = truncate(post.conversation, :length => 80, :separator => ' ').markdown.typography.html_safe
+      = render :partial => "/posts/post", :collection => @week.posts, :as => :post
