--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     = render "shared/admin_pane"
     = render "shared/vk_init"
     = render "shared/fb_init"
+    = render "shared/plus_one_init"
     #layout      
       #header
         = render "shared/header"
@@ -16,8 +17,6 @@
         = yield    
           
       #footer
-        = render "shared/footer"        
+        = render "shared/footer"
         
-    = render "shared/reformal"
-    = render "shared/metrika"  
-    = render "shared/clicky"  
+    = render "shared/metrika"
